Rollback some changes to fix the tests