@@ -76,6 +76,7 @@ import java.util.Map;
 import java.util.Random;
 import java.util.Set;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import org.assertj.core.util.Sets;
@@ -119,7 +120,7 @@ public class FProposalDropperResponsiveTest {
     runFProposalDropperResponsiveTest(
         numNodes,
         v -> {
-          var nodes = IntStream.range(0, numNodes).boxed().toList();
+          var nodes = IntStream.range(0, numNodes).boxed().collect(Collectors.toList());
           Collections.shuffle(nodes, random);
           return Sets.newHashSet(nodes.subList(0, (numNodes - 1) / 3));
         });
