@@ -74,10 +74,10 @@ import com.radixdlt.harness.simulation.SimulationTest.Builder;
 import com.radixdlt.harness.simulation.monitors.consensus.ConsensusMonitors;
 import com.radixdlt.harness.simulation.monitors.ledger.LedgerMonitors;
 import com.radixdlt.sync.SyncConfig;
-import java.util.List;
 import java.util.Random;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.assertj.core.api.AssertionsForClassTypes;
 import org.junit.Test;
@@ -109,8 +109,8 @@ public class RandomValidatorsTest {
   private static Function<Long, IntStream> randomEpochToNodesMapper(
       Function<Long, Random> randomSupplier) {
     return epoch -> {
-      List<Integer> indices = IntStream.range(0, numNodes).boxed().toList();
-      Random random = randomSupplier.apply(epoch);
+      var indices = IntStream.range(0, numNodes).boxed().collect(Collectors.toList());
+      var random = randomSupplier.apply(epoch);
       for (long i = 0; i < epoch; i++) {
         random.nextInt(numNodes);
       }
